# anodizer

./: .anodize.yaml  .anodizer.yaml  .env.release  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INCIDENT_RESPONSE.md  README.md  SECURITY.md  THREAT_MODEL.md  Taskfile.yml  action.yml  anodize.spec  anodizer.spec  coverage.json  thoughts.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: determinism_harness.rs  lib.rs  main.rs  pipeline.rs  timeout.rs
crates/cli/tests/: brontes_mcp_tools.rs  bump_integration.rs  changelog_command_integration.rs  check_determinism.rs  check_determinism_cargo_package.rs  check_determinism_docker.rs  check_version_files_integration.rs  config_dogfood.rs  exit_class_integration.rs  failure_policy_integration.rs  init_version_files_integration.rs  integration.rs  prebuilt_integration.rs  preflight_integration.rs  preserve_dist.rs  publish_only.rs  release_invocation_matrix.rs  release_workflow.rs  tag_changelog_integration.rs  tag_per_crate_integration.rs  tag_push_integration.rs  tag_rollback_integration.rs  tag_version_files_integration.rs  tag_workspace_integration.rs  test_helpers_usage.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: arch_path_guard.rs  archive_name.rs  archive_selection.rs  artifact.rs  binary_artifact_guard.rs  binstall.rs  build_env.rs  build_plan.rs  cargo_lock.rs  cargo_package.rs  changelog_scope.rs  config.rs  content_source.rs  context.rs  crate_scope.rs  defaults_merge.rs  determinism.rs  determinism_report.rs  determinism_runner.rs  disk.rs  dist.rs  docker_build.rs  docker_detect.rs  download_url.rs  elf.rs  env.rs  env_expand.rs  env_preflight.rs  env_source.rs  error_class.rs  extrafiles.rs  fs_atomic.rs  git.rs  github_client.rs  harness_signing.rs  hashing.rs  hooks.rs  http.rs  installer.rs  lib.rs  (+39 more)
crates/core/tests/: config_parsing_tests.rs
crates/stage-announce/: Cargo.toml  README.md
crates/stage-announce/src/: announcers.rs  bluesky.rs  discord.rs  discourse.rs  dispatch.rs  email.rs  helpers.rs  http.rs  lib.rs  linkedin.rs  mastodon.rs  mattermost.rs  opencollective.rs  reddit.rs  render_check.rs  run.rs  sent_marker.rs  slack.rs  teams.rs  telegram.rs  tests.rs  twitter.rs  webhook.rs
crates/stage-appbundle/: Cargo.toml  README.md
crates/stage-appbundle/src/: lib.rs
crates/stage-archive/: Cargo.toml  README.md
crates/stage-archive/src/: archive_config.rs  completions_gen.rs  entries.rs  file_specs.rs  formats.rs  lib.rs  run.rs  run_helpers.rs  tests.rs
crates/stage-attest/: Cargo.toml  README.md
crates/stage-attest/src/: lib.rs  tests.rs
crates/stage-blob/: Cargo.toml  README.md
crates/stage-blob/src/: kms.rs  lib.rs  preflight.rs  publisher.rs  run.rs  store.rs  tests.rs  upload.rs
crates/stage-build/: Cargo.toml  README.md
crates/stage-build/src/: binstall.rs  command.rs  cross_requirements.rs  lib.rs  prebuilt.rs  profile.rs  run.rs  run_helpers.rs  rustflags.rs  targets.rs  tests.rs  universal.rs  validation.rs  version_sync.rs  workspace.rs
crates/stage-changelog/: Cargo.toml  README.md
crates/stage-changelog/src/: enrich.rs  github_native.rs  group.rs  lib.rs  render.rs  run.rs  tests.rs
crates/stage-checksum/: Cargo.toml  README.md
crates/stage-checksum/src/: hashing.rs  lib.rs  run.rs  tests.rs
crates/stage-dmg/: Cargo.toml  README.md
crates/stage-dmg/src/: lib.rs
crates/stage-docker/: Cargo.toml  README.md
crates/stage-docker/src/: baseimage.rs  build.rs  command.rs  detect.rs  lib.rs  promote.rs  retry.rs  run.rs  staging.rs  tests.rs
crates/stage-docker/tests/: podman_integration.rs
crates/stage-flatpak/: Cargo.toml  README.md
crates/stage-flatpak/src/: helpers.rs  lib.rs  manifest.rs  stage.rs  tests.rs
crates/stage-msi/: Cargo.toml  README.md
crates/stage-msi/src/: build.rs  lib.rs  product_code.rs  template.rs  wix.rs
crates/stage-nfpm/: Cargo.toml  README.md
crates/stage-nfpm/src/: builders.rs  command.rs  filename.rs  generate.rs  lib.rs  run.rs  tests.rs  yaml.rs
crates/stage-notarize/: Cargo.toml  README.md
crates/stage-notarize/src/: lib.rs  retry.rs  run.rs  secret.rs
crates/stage-nsis/: Cargo.toml  README.md
crates/stage-nsis/src/: lib.rs
crates/stage-pkg/: Cargo.toml  README.md
crates/stage-pkg/src/: build.rs  builder.rs  lib.rs  stage.rs  tests.rs
crates/stage-prepublish-guard/: Cargo.toml  README.md
crates/stage-prepublish-guard/src/: lib.rs
crates/stage-publish/: Cargo.toml  README.md
crates/stage-publish/schemas/: SOURCES.md  chocolatey.nuspec.xsd  krew.v1alpha2.schema.json  snapcraft.snap-yaml.schema.json
crates/stage-publish/src/: actions_oidc.rs  artifactory.rs  aur.rs  aur_arch.rs  aur_source.rs  cargo.rs  chocolatey.rs  cloudsmith.rs  crates_io.rs  dispatch.rs  dockerhub.rs  failure_hooks.rs  fury.rs  homebrew.rs  http_upload.rs  krew.rs  lib.rs  nix.rs  npm.rs  poll.rs  preflight.rs  publisher_helpers.rs  publisher_preflight.rs  registry.rs  release_version_guard.rs  report.rs  rollback.rs  rollback_only.rs  run_summary.rs  scoop.rs  scope.rs  snapshot_validation.rs  test_responder.rs  testing.rs  upload.rs  uploads.rs  util.rs  winget.rs
crates/stage-publish/tests/: cargo_poison_guard_live.rs  run_report_persistence.rs  sibling_isolation.rs
crates/stage-release/: Cargo.toml  README.md
crates/stage-release/src/: dry_run.rs  flags.rs  forge.rs  gitea.rs  gitlab.rs  lib.rs  promote.rs  publisher.rs  release_body.rs  run.rs  test_support.rs  tests.rs
crates/stage-sbom/: Cargo.toml  README.md
crates/stage-sbom/src/: builtin.rs  expected.rs  helpers.rs  lib.rs  stage.rs  tests.rs
crates/stage-sign/: Cargo.toml  README.md
crates/stage-sign/src/: expected.rs  helpers.rs  keyload.rs  lib.rs  process.rs  tests.rs  tuf_cache.rs  verify.rs  (+1 more)
crates/stage-snapcraft/: Cargo.toml  README.md
crates/stage-source/: Cargo.toml  README.md
crates/stage-srpm/: Cargo.toml  README.md
crates/stage-templatefiles/: Cargo.toml  README.md
crates/stage-upx/: Cargo.toml  README.md
crates/stage-verify-release/: Cargo.toml  README.md
(+747 files in other folders)
