[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/stage-build",
    "crates/stage-archive",
    "crates/stage-nfpm",
    "crates/stage-checksum",
    "crates/stage-changelog",
    "crates/stage-release",
    "crates/stage-publish",
    "crates/stage-docker",
    "crates/stage-sign",
    "crates/stage-announce",
    "crates/stage-source",
    "crates/stage-upx",
    "crates/stage-snapcraft",
    "crates/stage-dmg",
    "crates/stage-msi",
    "crates/stage-pkg",
    "crates/stage-blob",
    "crates/stage-nsis",
    "crates/stage-appbundle",
    "crates/stage-flatpak",
    "crates/stage-notarize",
    "crates/stage-templatefiles",
    "crates/stage-makeself",
    "crates/stage-srpm",
    "crates/stage-sbom",
    "crates/stage-attest",
    "crates/stage-appimage",
    "crates/stage-verify-release",
    "crates/stage-prepublish-guard",
    "crates/cli",
    "crates/xtask",
]
# xtask is a dev-only tool (doc generation) invoked via `cargo xtask`.
# Exclude it from default-members so plain `cargo build`/`test`/`clippy`
# don't compile it — shaves ~20% off the CI test job.
default-members = [
    "crates/core",
    "crates/stage-build",
    "crates/stage-archive",
    "crates/stage-nfpm",
    "crates/stage-checksum",
    "crates/stage-changelog",
    "crates/stage-release",
    "crates/stage-publish",
    "crates/stage-docker",
    "crates/stage-sign",
    "crates/stage-announce",
    "crates/stage-source",
    "crates/stage-upx",
    "crates/stage-snapcraft",
    "crates/stage-dmg",
    "crates/stage-msi",
    "crates/stage-pkg",
    "crates/stage-blob",
    "crates/stage-nsis",
    "crates/stage-appbundle",
    "crates/stage-flatpak",
    "crates/stage-notarize",
    "crates/stage-templatefiles",
    "crates/stage-makeself",
    "crates/stage-srpm",
    "crates/stage-sbom",
    "crates/stage-attest",
    "crates/stage-appimage",
    "crates/stage-verify-release",
    "crates/stage-prepublish-guard",
    "crates/cli",
]

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[workspace.package]
version = "0.9.1"
edition = "2024"
# edition 2024 needs ≥1.85, but the code uses `Option::is_none_or` and
# `{integer}::is_multiple_of`, both stabilized in 1.87 — clippy's
# incompatible_msrv lint is the authoritative gate for this floor.
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/tj-smith47/anodizer"
homepage = "https://tj-smith47.github.io/anodizer"
documentation = "https://tj-smith47.github.io/anodizer"
authors = ["TJ Smith <tj@jarvispro.io>"]
keywords = ["release", "automation", "cargo", "ci-cd", "packaging"]
# command-line-utilities ("Applications to run at the command line") fits
# only the cli binary crate, which overrides this literally; the other 29
# published crates are pure libraries, so the workspace default omits it.
categories = ["development-tools", "development-tools::build-utils"]

[workspace.dependencies]
anodizer-core = { path = "crates/core", version = "0.9.1" }
anodizer-stage-build = { path = "crates/stage-build", version = "0.9.1" }
anodizer-stage-archive = { path = "crates/stage-archive", version = "0.9.1" }
anodizer-stage-nfpm = { path = "crates/stage-nfpm", version = "0.9.1" }
anodizer-stage-checksum = { path = "crates/stage-checksum", version = "0.9.1" }
anodizer-stage-changelog = { path = "crates/stage-changelog", version = "0.9.1" }
anodizer-stage-release = { path = "crates/stage-release", version = "0.9.1" }
anodizer-stage-publish = { path = "crates/stage-publish", version = "0.9.1" }
anodizer-stage-docker = { path = "crates/stage-docker", version = "0.9.1" }
anodizer-stage-sign = { path = "crates/stage-sign", version = "0.9.1" }
anodizer-stage-announce = { path = "crates/stage-announce", version = "0.9.1" }
anodizer-stage-source = { path = "crates/stage-source", version = "0.9.1" }
anodizer-stage-sbom = { path = "crates/stage-sbom", version = "0.9.1" }
anodizer-stage-attest = { path = "crates/stage-attest", version = "0.9.1" }
anodizer-stage-appimage = { path = "crates/stage-appimage", version = "0.9.1" }
anodizer-stage-upx = { path = "crates/stage-upx", version = "0.9.1" }
anodizer-stage-snapcraft = { path = "crates/stage-snapcraft", version = "0.9.1" }
anodizer-stage-dmg = { path = "crates/stage-dmg", version = "0.9.1" }
anodizer-stage-msi = { path = "crates/stage-msi", version = "0.9.1" }
anodizer-stage-pkg = { path = "crates/stage-pkg", version = "0.9.1" }
anodizer-stage-blob = { path = "crates/stage-blob", version = "0.9.1" }
anodizer-stage-nsis = { path = "crates/stage-nsis", version = "0.9.1" }
anodizer-stage-appbundle = { path = "crates/stage-appbundle", version = "0.9.1" }
anodizer-stage-flatpak = { path = "crates/stage-flatpak", version = "0.9.1" }
anodizer-stage-notarize = { path = "crates/stage-notarize", version = "0.9.1" }
anodizer-stage-templatefiles = { path = "crates/stage-templatefiles", version = "0.9.1" }
anodizer-stage-makeself = { path = "crates/stage-makeself", version = "0.9.1" }
anodizer-stage-srpm = { path = "crates/stage-srpm", version = "0.9.1" }
anodizer-stage-verify-release = { path = "crates/stage-verify-release", version = "0.9.1" }
anodizer-stage-prepublish-guard = { path = "crates/stage-prepublish-guard", version = "0.9.1" }
brontes = "0.2.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.40"
serde_yaml_ng = "0.10"
roxmltree = "0.20"
toml = "0.8"
toml_edit = "0.22"
regex = "1"
semver = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
sha1 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
hyper-timeout = "0.5"
octocrab = "0.44"
tower = { version = "0.5", default-features = false, features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "stream", "rustls-tls"] }
percent-encoding = "2"
colored = "2"
chrono = "0.4"
# `static` vendors liblzma and compiles it with the active C compiler (zig cc
# under zigbuild) instead of pkg-config-probing the build host. A dynamically
# linked system liblzma.so adds a runtime dependency on the host's lzma AND
# drags host-glibc-versioned symbols into the link, breaking the hermetic
# glibc floor that routing linux-gnu builds through zigbuild protects.
xz2 = { version = "0.1", features = ["static"] }
zstd = "0.13"
filetime = "0.2"
glob = "0.3"
dialoguer = { version = "0.11", default-features = false }
http = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12", "logging", "native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
serial_test = "3"
schemars = "0.8"
tera = "1.20.1"
sha3 = "0.10"
blake3 = "1"
crc32fast = "1"
md-5 = "0.10"
hmac = "0.12"
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
