[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/stage-build",
    "crates/stage-archive",
    "crates/stage-nfpm",
    "crates/stage-checksum",
    "crates/stage-changelog",
    "crates/stage-release",
    "crates/stage-publish",
    "crates/stage-docker",
    "crates/stage-sign",
    "crates/stage-announce",
    "crates/stage-source",
    "crates/stage-upx",
    "crates/stage-snapcraft",
    "crates/stage-dmg",
    "crates/stage-msi",
    "crates/stage-pkg",
    "crates/stage-blob",
    "crates/stage-nsis",
    "crates/stage-appbundle",
    "crates/stage-flatpak",
    "crates/stage-notarize",
    "crates/stage-templatefiles",
    "crates/stage-makeself",
    "crates/stage-srpm",
    "crates/stage-sbom",
    "crates/stage-attest",
    "crates/stage-appimage",
    "crates/stage-verify-release",
    "crates/stage-prepublish-guard",
    "crates/cli",
    "crates/xtask",
]
# xtask is a dev-only tool (doc generation) invoked via `cargo xtask`.
# Exclude it from default-members so plain `cargo build`/`test`/`clippy`
# don't compile it — shaves ~20% off the CI test job.
default-members = [
    "crates/core",
    "crates/stage-build",
    "crates/stage-archive",
    "crates/stage-nfpm",
    "crates/stage-checksum",
    "crates/stage-changelog",
    "crates/stage-release",
    "crates/stage-publish",
    "crates/stage-docker",
    "crates/stage-sign",
    "crates/stage-announce",
    "crates/stage-source",
    "crates/stage-upx",
    "crates/stage-snapcraft",
    "crates/stage-dmg",
    "crates/stage-msi",
    "crates/stage-pkg",
    "crates/stage-blob",
    "crates/stage-nsis",
    "crates/stage-appbundle",
    "crates/stage-flatpak",
    "crates/stage-notarize",
    "crates/stage-templatefiles",
    "crates/stage-makeself",
    "crates/stage-srpm",
    "crates/stage-sbom",
    "crates/stage-attest",
    "crates/stage-appimage",
    "crates/stage-verify-release",
    "crates/stage-prepublish-guard",
    "crates/cli",
]

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[workspace.package]
version = "0.13.0"
edition = "2024"
# edition 2024 needs ≥1.85, but the code uses `Option::is_none_or` and
# `{integer}::is_multiple_of`, both stabilized in 1.87 — clippy's
# incompatible_msrv lint is the authoritative gate for this floor.
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tj-smith47/anodizer"
homepage = "https://tj-smith47.github.io/anodizer"
documentation = "https://tj-smith47.github.io/anodizer"
authors = ["TJ Smith <tj@jarvispro.io>"]
keywords = ["release", "automation", "cargo", "ci-cd", "packaging"]
# command-line-utilities ("Applications to run at the command line") fits
# only the cli binary crate, which overrides this literally; the other 29
# published crates are pure libraries, so the workspace default omits it.
categories = ["development-tools", "development-tools::build-utils"]

[workspace.dependencies]
anodizer-core = { path = "crates/core", version = "0.13.0" }
anodizer-stage-build = { path = "crates/stage-build", version = "0.13.0" }
anodizer-stage-archive = { path = "crates/stage-archive", version = "0.13.0" }
anodizer-stage-nfpm = { path = "crates/stage-nfpm", version = "0.13.0" }
anodizer-stage-checksum = { path = "crates/stage-checksum", version = "0.13.0" }
anodizer-stage-changelog = { path = "crates/stage-changelog", version = "0.13.0" }
anodizer-stage-release = { path = "crates/stage-release", version = "0.13.0" }
anodizer-stage-publish = { path = "crates/stage-publish", version = "0.13.0" }
anodizer-stage-docker = { path = "crates/stage-docker", version = "0.13.0" }
anodizer-stage-sign = { path = "crates/stage-sign", version = "0.13.0" }
anodizer-stage-announce = { path = "crates/stage-announce", version = "0.13.0" }
anodizer-stage-source = { path = "crates/stage-source", version = "0.13.0" }
anodizer-stage-sbom = { path = "crates/stage-sbom", version = "0.13.0" }
anodizer-stage-attest = { path = "crates/stage-attest", version = "0.13.0" }
anodizer-stage-appimage = { path = "crates/stage-appimage", version = "0.13.0" }
anodizer-stage-upx = { path = "crates/stage-upx", version = "0.13.0" }
anodizer-stage-snapcraft = { path = "crates/stage-snapcraft", version = "0.13.0" }
anodizer-stage-dmg = { path = "crates/stage-dmg", version = "0.13.0" }
anodizer-stage-msi = { path = "crates/stage-msi", version = "0.13.0" }
anodizer-stage-pkg = { path = "crates/stage-pkg", version = "0.13.0" }
anodizer-stage-blob = { path = "crates/stage-blob", version = "0.13.0" }
anodizer-stage-nsis = { path = "crates/stage-nsis", version = "0.13.0" }
anodizer-stage-appbundle = { path = "crates/stage-appbundle", version = "0.13.0" }
anodizer-stage-flatpak = { path = "crates/stage-flatpak", version = "0.13.0" }
anodizer-stage-notarize = { path = "crates/stage-notarize", version = "0.13.0" }
anodizer-stage-templatefiles = { path = "crates/stage-templatefiles", version = "0.13.0" }
anodizer-stage-makeself = { path = "crates/stage-makeself", version = "0.13.0" }
anodizer-stage-srpm = { path = "crates/stage-srpm", version = "0.13.0" }
anodizer-stage-verify-release = { path = "crates/stage-verify-release", version = "0.13.0" }
anodizer-stage-prepublish-guard = { path = "crates/stage-prepublish-guard", version = "0.13.0" }
brontes = "0.2.0"
anyhow = "1"
# Compile-time-exhaustive enum iteration: `PublisherKind` derives `EnumIter`
# so `valid_publisher_names`, the `--skip` publisher vocabulary, and the
# trait registry are all generated from one variant list and cannot drift.
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.46"
serde_yaml_ng = "0.10"
roxmltree = "0.21"
toml = "1.1"
toml_edit = "0.25"
regex = "1"
semver = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
tempfile = "3"
# Cross-platform free-space probe (statvfs on unix, GetDiskFreeSpaceExW on
# Windows) for the determinism harness's disk-headroom guard. `sync` only —
# no async runtime, no file-locking surface pulled in.
fs4 = { version = "1", default-features = false, features = ["sync"] }
# RustCrypto hash/MAC stack — pinned to the digest-0.10 line on purpose.
# `stage-checksum`'s `hash_file_with::<D: Digest>` unifies every algorithm
# (blake2b/s, md5, sha1, sha2, sha3) under one `digest` trait version, so they
# must all share it. `blake2` has no stable `digest`-0.11 release yet (latest is
# 0.11.0-rc.6), and a release-*signing* tool does not ship a release-candidate
# crypto crate — so the whole stack stays on `digest` 0.10 until `blake2 0.11`
# lands. Dependabot is told to hold these back (.github/dependabot.yml) so the
# group can't split the graph again. Bump all of them together once blake2 ships.
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", default-features = false, features = ["v5"] }
blake2 = "0.10"
hyper-timeout = "0.5"
# `jwt-aws-lc-rs` replaces octocrab's default `jwt-rust-crypto`, which pulls the
# `rsa` crate (RUSTSEC-2023-0071, "Marvin Attack" — no fixed release exists).
# octocrab's JWT path serves GitHub *App* auth only; anodizer authenticates with
# a Bearer token (`AuthState::None`), so the JWT crypto backend is never
# exercised at runtime — this swap is a pure dependency-graph change. `aws-lc-rs`
# is already compiled (object_store pulls it), so backing JWT with it instead of
# `rsa` adds no new toolchain. Mirrors octocrab's other default features.
octocrab = { version = "0.53", default-features = false, features = [
    "follow-redirect",
    "retry",
    "rustls",
    "timeout",
    "tracing",
    "default-client",
    "rustls-ring",
    "jwt-aws-lc-rs",
] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "stream", "rustls-tls"] }
percent-encoding = "2"
colored = "3"
chrono = "0.4"
# `static` vendors liblzma and compiles it with the active C compiler (zig cc
# under zigbuild) instead of pkg-config-probing the build host. A dynamically
# linked system liblzma.so adds a runtime dependency on the host's lzma AND
# drags host-glibc-versioned symbols into the link, breaking the hermetic
# glibc floor that routing linux-gnu builds through zigbuild protects.
xz2 = { version = "0.1", features = ["static"] }
zstd = "0.13"
filetime = "0.2"
glob = "0.3"
dialoguer = { version = "0.12", default-features = false }
http = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12", "logging", "native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem"] }
# Held at 0.13: object_store 0.14 takes a direct `aws-lc-rs` dependency, which
# (1) pulls a second rustls CryptoProvider alongside our `ring`, and rustls
# 0.23 then refuses to auto-select one — panicking at runtime on the first TLS
# handshake (GitHub API, SMTP, blob upload); and (2) drags a C/cmake/asm build
# toolchain that breaks the hermetic, ring-only cross-compile the determinism
# harness depends on (musl, windows-aarch64, zigbuild). Hold until object_store
# offers a ring-only build path. Dependabot is told to skip the 0.14 bump
# (.github/dependabot.yml).
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
object = { version = "0.39", default-features = false, features = ["read", "elf", "std"] }
serial_test = "3"
schemars = "1.2"
tera = "1.20.1" # latest 1.x; held off 2.x (from-scratch rewrite breaks GoReleaser template parity — see dependabot.yml ignore)
sha3 = "0.10" # digest-0.10 line; see the sha1/sha2 pin note above
blake3 = "1"
crc32fast = "1"
md-5 = "0.10" # digest-0.10 line; see the sha1/sha2 pin note above
hmac = "0.12" # digest-0.10 line; see the sha1/sha2 pin note above
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
