[package]
name = "anodize"
description = "A Rust-native release automation tool inspired by GoReleaser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "anodize_cli"
path = "src/lib.rs"

[[bin]]
name = "anodize"
path = "src/main.rs"

[dependencies]
anodize-core.workspace = true
anodize-stage-build.workspace = true
anodize-stage-archive.workspace = true
anodize-stage-nfpm.workspace = true
anodize-stage-checksum.workspace = true
anodize-stage-changelog.workspace = true
anodize-stage-release.workspace = true
anodize-stage-publish.workspace = true
anodize-stage-docker.workspace = true
anodize-stage-sign.workspace = true
anodize-stage-announce.workspace = true
anodize-stage-source.workspace = true
anodize-stage-upx.workspace = true
anodize-stage-snapcraft.workspace = true
anodize-stage-dmg.workspace = true
anodize-stage-msi.workspace = true
anodize-stage-pkg.workspace = true
anodize-stage-blob.workspace = true
anodize-stage-nsis.workspace = true
anodize-stage-appbundle.workspace = true
anodize-stage-flatpak.workspace = true
anodize-stage-notarize.workspace = true
anodize-stage-templatefiles.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap_mangen = "0.2"
glob.workspace = true
serde_json.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
schemars.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
serial_test.workspace = true
tempfile.workspace = true
serde_yaml_ng.workspace = true
