[package]
name = "anodizer"
description = "A Rust-native release automation tool inspired by GoReleaser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "anodizer_cli"
path = "src/lib.rs"

[[bin]]
name = "anodizer"
path = "src/main.rs"

[dependencies]
anodizer-core.workspace = true
anodizer-stage-build.workspace = true
anodizer-stage-archive.workspace = true
anodizer-stage-nfpm.workspace = true
anodizer-stage-checksum.workspace = true
anodizer-stage-changelog.workspace = true
anodizer-stage-release.workspace = true
anodizer-stage-publish.workspace = true
anodizer-stage-docker.workspace = true
anodizer-stage-sign.workspace = true
anodizer-stage-announce.workspace = true
anodizer-stage-source.workspace = true
anodizer-stage-upx.workspace = true
anodizer-stage-snapcraft.workspace = true
anodizer-stage-dmg.workspace = true
anodizer-stage-msi.workspace = true
anodizer-stage-pkg.workspace = true
anodizer-stage-blob.workspace = true
anodizer-stage-nsis.workspace = true
anodizer-stage-appbundle.workspace = true
anodizer-stage-flatpak.workspace = true
anodizer-stage-notarize.workspace = true
anodizer-stage-templatefiles.workspace = true
anodizer-stage-makeself.workspace = true
anodizer-stage-srpm.workspace = true
anodizer-stage-sbom.workspace = true
brontes.workspace = true
anyhow.workspace = true
toml_edit.workspace = true
chrono.workspace = true
clap_mangen = "0.2"
glob.workspace = true
serde_json.workspace = true
sha2.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
tokio.workspace = true
serde.workspace = true
schemars.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serial_test.workspace = true
serde_yaml_ng.workspace = true
