[package]
name = "anodize-core"
description = "Core configuration, context, and template engine for the anodize release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
test-helpers = []

[dev-dependencies]
anodize-core = { path = ".", features = ["test-helpers"] }
serial_test.workspace = true
tempfile = "3"

[dependencies]
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
glob.workspace = true
regex.workspace = true
tera.workspace = true
chrono.workspace = true
schemars.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
blake2.workspace = true
blake3.workspace = true
crc32fast.workspace = true
md-5.workspace = true
